FLOW-2101 - fixed missing margin from outcomes because they are now under form-group

--- a/css/select.less
+++ b/css/select.less
@@ -4,6 +4,10 @@
 
         margin-bottom: 0px;
 
+        .outcome {
+            margin-bottom: 1em !important;
+        }
+
         &.has-error .resizable-input {
             box-shadow: none;
         }
